src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bombora_1__c</fullName>
        <label>Bombora 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bombora_2__c</fullName>
        <label>Bombora 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bombora_3__c</fullName>
        <label>Bombora 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contacts (Brand)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contacts (Brand)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>if( $User.Id == OwnerId,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drift_Notes__c</fullName>
        <label>Drift Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Outreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Handle_Cb__c</fullName>
        <label>Facebook Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>FirstName + &quot; &quot; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Handle_Cb__c</fullName>
        <label>LinkedIn Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <formula>IF(!ISBLANK(LinkedIn_Handle_Cb__c),&quot;https://linkedin.com/&quot; &amp; LinkedIn_Handle_Cb__c, LinkedIn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Media_Process_Type__c</fullName>
        <label>Media Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Service YouTube</fullName>
                </value>
                <value>
                    <fullName>Managed Service Social</fullName>
                </value>
                <value>
                    <fullName>Self Serve DBM YouTube</fullName>
                </value>
                <value>
                    <fullName>Self Serve Adwords YouTube</fullName>
                </value>
                <value>
                    <fullName>Self Serve Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Acquired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Acquired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Industry__c</fullName>
        <label>Outreach Industry</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Stage__c</fullName>
        <label>Contact Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Client</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Approaching</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Cold / Not Started</fullName>
                </value>
                <value>
                    <fullName>Discovery Meeting</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Inactive Client</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>No Longer At Company</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Validating Benefits</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Wrong Timing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Tags__c</fullName>
        <label>Outreach Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pain_Point__c</fullName>
        <label>Pain Point</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Behavior_Score__c</fullName>
        <label>Person Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Demographic_Normalized_Score__c</fullName>
        <label>Person Demographic Normalized Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Demographic_Rank__c</fullName>
        <label>Person Demographic Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Demographic_Score__c</fullName>
        <label>Person Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Level/Founder</fullName>
                </value>
                <value>
                    <fullName>VP Level</fullName>
                </value>
                <value>
                    <fullName>Director Level / Business Development</fullName>
                </value>
                <value>
                    <fullName>SaaS User Level</fullName>
                </value>
                <value>
                    <fullName>Executive Assistant</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Planner / Strategist</fullName>
                </value>
                <value>
                    <fullName>Media Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBM Self Serve</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Bounce Back</fullName>
                </value>
                <value>
                    <fullName>Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>No longer w/company</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not a fit</fullName>
                </value>
                <value>
                    <fullName>Using competitor</fullName>
                </value>
                <value>
                    <fullName>Using Google</fullName>
                </value>
                <value>
                    <fullName>Contact left</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Cb__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ceo</fullName>
                </value>
                <value>
                    <fullName>communications</fullName>
                </value>
                <value>
                    <fullName>consulting</fullName>
                </value>
                <value>
                    <fullName>customer_service</fullName>
                </value>
                <value>
                    <fullName>education</fullName>
                </value>
                <value>
                    <fullName>engineering</fullName>
                </value>
                <value>
                    <fullName>finance</fullName>
                </value>
                <value>
                    <fullName>founder</fullName>
                </value>
                <value>
                    <fullName>health_professional</fullName>
                </value>
                <value>
                    <fullName>human_resources</fullName>
                </value>
                <value>
                    <fullName>information_technology</fullName>
                </value>
                <value>
                    <fullName>legal</fullName>
                </value>
                <value>
                    <fullName>marketing</fullName>
                </value>
                <value>
                    <fullName>operations</fullName>
                </value>
                <value>
                    <fullName>owner</fullName>
                </value>
                <value>
                    <fullName>president</fullName>
                </value>
                <value>
                    <fullName>product</fullName>
                </value>
                <value>
                    <fullName>public_relations</fullName>
                </value>
                <value>
                    <fullName>real_estate</fullName>
                </value>
                <value>
                    <fullName>recruiting</fullName>
                </value>
                <value>
                    <fullName>research</fullName>
                </value>
                <value>
                    <fullName>sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Seniority_Cb__c</fullName>
        <label>Seniority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>executive</fullName>
                </value>
                <value>
                    <fullName>director</fullName>
                </value>
                <value>
                    <fullName>manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Pre-Meeting</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>In-House/Self-Serve</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Marketing/Recycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTC_Offset_Cb__c</fullName>
        <label>UTC Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_Cb__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Job_Level__c</fullName>
        <label>ZoomInfo Job Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>InternalUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Internal Users</value>
        </filters>
        <label>Internal Users</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotEditInternalContacts</fullName>
        <active>true</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
Account.Name = &quot;Internal Users&quot; &amp;&amp;
$User.ProfileId != &quot;00eU0000000iVp4&quot;</errorConditionFormula>
        <errorMessage>You cannot edit internal Contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MailingCityStateRequired</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp;
(isblank( MailingCity ) || 
isblank(MailingState)) &amp;&amp;
isblank(MailingCountry) &amp;&amp;
!ISNEW()</errorConditionFormula>
        <errorMessage>Please provide Mailing City and Mailing State within Address or Mailing Country if outside of US</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneRequired</fullName>
        <active>false</active>
        <errorConditionFormula>not(BypassValidationRule__c) &amp;&amp; 
!priorvalue(BypassValidationRule__c) &amp;&amp;
isblank(Phone) &amp;&amp; isblank(MobilePhone) &amp;&amp; !NoPhone__c</errorConditionFormula>
        <errorMessage>Please provide phone number or mark No Phone checkbox</errorMessage>
    </validationRules>
</CustomObject>